--- a/Debug/makefile
+++ b/Debug/makefile
@@ -8,6 +8,8 @@ RM := rm
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include src/professional-cuda-c-programming/chapter01/subdir.mk
+-include src/professional-cuda-c-programming/subdir.mk
 -include src/subdir.mk
 -include subdir.mk
 -include objects.mk
